--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       </div>
       <div class="column">
         <p><strong>Social Links</strong></p>
-        <a href="https://github.com/AntonioScapellato"><i class="fab fa-github"></i> GitHub</a><br>
-        <a href="https://www.linkedin.com/in/antonio-scapellato/"><i class="fab fa-linkedin"></i> Linkedin</a><br>
+        <a href="https://github.com/AntonioScapellato"><i class="fa fa-github"></i> GitHub</a><br>
+        <a href="https://www.linkedin.com/in/antonio-scapellato/"><i class="fa fa-linkedin"></i> Linkedin</a><br>
         <a href="https://antonioscapellato.com">antonioscapellato.com</a><br>
       </div>
 
