--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title is-4">Salary vs Experience</p>
+                <p class="title is-4">Image Classification</p>
                 <p class="subtitle is-6">Antonio Scapellato</p>
               </div>
             </div>
